--- a/about_html.html
+++ b/about_html.html
@@ -1,9 +1,15 @@
 <! DOCTYPE html>
 <html>
   <head>
-    <title>about_html</title>
+    <title>Abhradip</title>
   </head>
   <body>
+   
+   <h3><b>Name:</b>Abhradip</h3>
+
+   <h3><b>College:</b>Ram Krishna Mahato Government Engineering College</h3>
+
+   <h3><b>Stream:</b>Electronics And Communication Engineering</h3>
 
    <p>
        Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such 
