--- a/about_html.html
+++ b/about_html.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <title>Abhradip</title>
+    <link rel="stylesheet" href="about_html.css">
   </head>
   <body>
    
+   <img src="download.jpg" alt="flowers" title="flowers">
+
    <h3><b>Name:</b>Abhradip</h3>
 
    <h3><b>College:</b>Ram Krishna Mahato Government Engineering College</h3>
