--- a/about_html.html
+++ b/about_html.html
@@ -12,7 +12,7 @@
 
    <h3><b>College:</b>Ram Krishna Mahato Government Engineering College</h3>
 
-   <h3><b>Stream:</b>Electronics And Communication Engineering</h3>
+   <h3><b>Stream:</b><a href="lists.html">Electronics And Communication Engineering</a></h3>
 
    <p>
        Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such 
