--- a/about_html.html
+++ b/about_html.html
@@ -5,15 +5,18 @@
     <link rel="stylesheet" href="about_html.css">
   </head>
   <body>
-   
-   <img src="download.jpg" alt="flowers" title="flowers">
-
+   <div id="image">
+     <img src="download.jpg" alt="flowers" title="flowers">
+   </div>
+   <div id="text">
+   <div id="info">
    <h3><b>Name:</b>Abhradip</h3>
 
    <h3><b>College:</b>Ram Krishna Mahato Government Engineering College</h3>
 
    <h3><b>Stream:</b><a href="lists.html">Electronics And Communication Engineering</a></h3>
-
+   </div>
+   <div id="main">
    <p>
        Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such 
        as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.
@@ -31,6 +34,7 @@
        the page. Other tags such as &ltp&gt surround and provide information about document text and may include other tags as sub-elements. Browsers do not display 
        the HTML tags, but use them to interpret the content of the page.
    </p>
-
+   </div>
+   </div>
   </body>
 </html>
