made submit button

--- a/form.html
+++ b/form.html
@@ -6,6 +6,7 @@
   <body>
      <fieldset>
         <legend>Registration form:</legend>
+        <form action="register" method="get">
         <label for="name">Name:</label>
         <input id="name" type="text"><br>
         <label for="phone">Phone:</label>
@@ -19,6 +20,8 @@
         <input name="subject" type="checkbox">Mathematics<br>
         <input name="subject" type="checkbox">Physics<br>
         <input name="subject" type="checkbox">Computer Science<br>
+        <input type="submit" formtarget="_blank" value="Submit to a new window/tab">
+        </form>
      </fieldset>
   </body>
 </html>
