--- a/marks.html
+++ b/marks.html
@@ -3,6 +3,7 @@
    <head>
       <title>marks</title>
       <link rel="stylesheet" href="marks.css">
+     <link rel="stylesheet" href="bgimage.css">
    </head>
    <body>
        <table>
