--- a/about_html.html
+++ b/about_html.html
@@ -17,6 +17,9 @@
    <h3><b>Stream:</b><a href="lists.html">Electronics And Communication Engineering</a></h3>
    </div>
    <div id="main">
+   <div id="title">
+   <p>About Html</p>
+   </div>
    <p>
        Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such 
        as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.
