--- a/lists.html
+++ b/lists.html
@@ -4,6 +4,7 @@
     <title>lists
     </title>
      <link rel="stylesheet" href="bgimage.css">
+     <link rel="stylesheet" href="lists.css">
   <head>
   <body>
      <div id="main">
