--- a/about_html.html
+++ b/about_html.html
@@ -17,6 +17,14 @@
    <h3><b>Stream:</b><a href="lists.html">Electronics And Communication Engineering</a></h3>
    </div>
    <div id="main">
+   <nav>
+      <ul>
+          <a href="about_html.html"><li>Home</li></a>
+          <a href="lists.html"><li>Courses</li></a>
+          <a href="marks.html"><li>Marks</li></a>
+          <a href="form.html"><li>Registration</li></a>
+      </ul>
+   </nav>
    <div id="title">
    <p>About Html</p>
    </div>
