--- a/marks.html
+++ b/marks.html
@@ -7,23 +7,23 @@
    </head>
    <body>
        <table>
-           <tr>
+           <tr id="head">
                <th>Subject</th>
                <th>Marks</th>
            </tr>
-                <td>Organisational Behaviour</td>
-                <td>8.9</td>
+                <td class="first">Organisational Behaviour</td>
+                <td class="second">8.9</td>
            <tr>
-                <td>Satellite Communication</td>
+                <td class="first">Satellite Communication</td>
                 <td>8.6</td>
            </tr>
            <tr>
-                <td>DBMS</td>
-                <td>8.8</td>
+                <td class="first">DBMS</td>
+                <td class="second">8.8</td>
            </tr>
            <tr>
-                <td>Computer Networks</td>
-                <td>8.7</td>
+                <td class="first">Computer Networks</td>
+                <td class="second">8.7</td>
            </tr>
        </table>
    </body>
