--- a/marks.html
+++ b/marks.html
@@ -15,7 +15,7 @@
                 <td class="second">8.9</td>
            <tr>
                 <td class="first">Satellite Communication</td>
-                <td>8.6</td>
+                <td class="second">8.6</td>
            </tr>
            <tr>
                 <td class="first">DBMS</td>
