--- a/marks.html
+++ b/marks.html
@@ -3,7 +3,8 @@
    <head>
       <title>marks</title>
       <link rel="stylesheet" href="marks.css">
-     <link rel="stylesheet" href="bgimage.css">
+      <link rel="stylesheet" href="bgimage.css">
+      <script src="marks.js"></script>
    </head>
    <body>
        <table>
