--- a/about_html.html
+++ b/about_html.html
@@ -3,6 +3,7 @@
   <head>
     <title>Abhradip</title>
     <link rel="stylesheet" href="about_html.css">
+    <script src="about_html.js"></script>
   </head>
   <body>
    <div id="image">
@@ -28,7 +29,7 @@
    <div id="title">
    <p>About Html</p>
    </div>
-   <p>
+   <p id="description">
        Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such 
        as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.
    </p>
