--- a/marks.html
+++ b/marks.html
@@ -2,12 +2,14 @@
 <html>
    <head>
       <title>marks</title>
-      <link rel="stylesheet" href="marks.css">
       <link rel="stylesheet" href="bgimage.css">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
       <script src="marks.js"></script>
    </head>
    <body>
-       <table>
+       <div style="height:40px;"></div>
+       <div class="container">
+       <table class="table table-striped">
            <tr id="head">
                <th>Subject</th>
                <th>Marks</th>
@@ -27,5 +29,6 @@
                 <td class="second">8.7</td>
            </tr>
        </table>
+      </div>
    </body>
 </html>
